update FunctionNode